# CG-v6

./: CMakeLists.txt
include/: AudioPlayer.h  EmotionDetector.h  Renderer.h
resources/: emotions.json
src/: AudioPlayer.cpp  EmotionDetector.cpp  Renderer.cpp  main.cpp
